2023-01-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'growing' and 'compressed' special attributes
	  - support uncompressed hashsum comparison for gzip files (closes: #33)
	  - support hashsums for growing files (closes: #34)
	  - 'S' attribute is now deprecated, use 'growing+s' attributes instead
	  - replace 'S' attribute in '>' compound group with 'growing+s'
	  - add new log level 'compare'
	  - improve some logging

2023-01-15 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Do not show 'different attributes' message for ignored attributes

2022-11-20 Sam James <sam@gentoo.org>
	* Fix bashisms in build system
	* Fix configure.ac compatibility with Clang 16

2022-11-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove Prelink support (--with-prelink configure option)

2022-11-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Change default number of workers to 1 (single-thread)
	* Fix typo in aide.conf manual page

2022-09-04 Marc Haber <mh+debian-packages@zugschlus.de>
	* Allow executable config files to belong to root as well (closes: #137)

2022-08-20 Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix some compiler warnings
	* Handle read/write errors in parent/child communication
	* Escape backslash in JSON strings (closes: #136)
	* Improve configurability of workers
	  - add num_workers config option (closes: #134)
	  - accept percentage of available processors (closes: #135)

2022-08-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Support multithreading for hashsum calculation (closes: #12)
	  - add --without-pthread configure option
	  - add new log level 'thread'
	  - add new '--workers' parameter
	  - add new exit code 23 for thread errors
	  - require Autoconf Macro Archive (autoconf-archive)
	* Support restricted rules with empty restriction (closes: #133)

2022-08-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add exit code 22 for memory allocation errors

2022-08-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>