@@ -1,3 +1,6 @@
+2023-01-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Fix special attributes handling when pthread is not compiled in
+
 2023-01-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Add 'growing' and 'compressed' special attributes
 	  - support uncompressed hashsum comparison for gzip files (closes: #33)
